# POO_Proyecto_BikeParking_POO-BD_Josu_G2

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_validators_objetos.py
UD03_BikeParking_POO&BD_Tests/data/: schema.sql
UD03_BikeParking_POO&BD_Tests/tests/: conftest.py  test_sqlite_crud.py  test_validators_sqlite.py
data/: bicis.csv  bike_parking.db  registros.csv  schema.sql  usuarios.csv
docs/: app.html  config.html  data_utils.csv_utils.html  data_utils.validators.html
no_validos/: test_csv_utils.py  test_validators_estado_campos_normalizacion.py  test_validators_unicidad_existencia.py
src/: __init__.py  app.py  config.py
src/data_utils/: csv_utils.py  sqlite_utils.py  validators.py
src/ecpy_bikeparking.egg-info/: PKG-INFO  SOURCES.txt
src/modelo/: bici.py  registro.py  usuario.py
tests/: conftest.py  pytest.ini  test_sqlite_crud.py  test_sqlite_schema.py  test_validators_dni_email.py  test_validators_sqlite.py  test_validators_unicidad_existencia.py  validators_sqlite.py
